# buph

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/exercise_data/: create.sql  create.sqlite  exercises.yaml  fixtures.yaml  muscles.yaml  rigs.yaml  stretches.yaml  test.yaml
data/exercise_data/exercises/: abdomen.yaml  arms.yaml  back.yaml  buttocks.yaml  chest.yaml  exercises.yaml  legs.yaml  shoulders.yaml
database/: create.sqlite  equipment_accessories.sqlite  equipment_rigs.sqlite  exercises.sqlite  fixtures.sqlite  make_db.sh  muscles.sqlite  muscles_exercised.sqlite
database/exercise_db/: create.sqlite  equipment_accessories.sqlite  equipment_resistances.sqlite  equipment_rigs.sqlite  exercise_fixtures.sqlite  exercise_rigs.sqlite  exercises.sqlite  fixtures.sqlite  make_db.sh  muscle_antagonists.sqlite  muscle_groups.sqlite  muscles.sqlite  muscles_exercised.sqlite  rigs.sqlite  stretches.sqlite
database/user_db/: create.sqlite  equipment_accessories.sqlite  exercise_set_history.sqlite  fixtures.sqlite  make_db.sh  user_fixtures.sqlite  user_profiles.sqlite  user_rigs.sqlite
python/: .pylintrc  setup.py
python/apps/: exercise_renderer.py
python/tests/: CMakeLists.txt  test_database.py  test_exercise_database.py  test_exercise_rendering.py  test_routine_engine.py  test_routine_generator.py  test_user_database.py
python/utils/: __init__.py  exercise_converter.py  muscle_scraper.py  process_yaml.py
python/xrsrv/: database.py  exercise_database.py  exercise_rendering.py  plan_generator.py  routine_engine.py  routine_generator.py  routine_generators.py  type_factories.py  user_database.py
python/xrsrv/routine_generators/: basic_random.py  debug.py  generator_exception.py  multi_day_random.py
scripts/: env.sh  exercise_converter.py  make_base_exercise_db_postgres.sh  make_base_exercise_db_sqlite.sh  muscle_scraper.py  process_yaml.py
tmp/database/: create.sqlite
